[GPUP][MSE] networkState doesn't move to NETWORK_IDLE once MediaSource.endOfStream() is called https://bugs.webkit.org/show_bug.cgi?id=254324 rdar://107129124

Reviewed by Youenn Fablet.

The required methods weren't implemented in the
MediaSourcePrivateRemote/RemoteMediaSourceProxy combo of objects.
We implement them.

Covered in media/media-source/media-source-end-of-stream.html once
webkit.org/b/225367 is done.

* LayoutTests/media/media-source/media-source-end-of-stream.html: Fix whitespaces
* Source/WebCore/platform/graphics/MediaSourcePrivate.h:
* Source/WebCore/platform/graphics/SourceBufferPrivate.cpp:
(WebCore::SourceBufferPrivate::addTrackBuffer): Whitespaces fix
* Source/WebKit/GPUProcess/media/RemoteMediaSourceProxy.cpp:
(WebKit::RemoteMediaSourceProxy::markEndOfStream):
(WebKit::RemoteMediaSourceProxy::unmarkEndOfStream):
* Source/WebKit/GPUProcess/media/RemoteMediaSourceProxy.h:
* Source/WebKit/GPUProcess/media/RemoteMediaSourceProxy.messages.in:
* Source/WebKit/WebProcess/GPU/media/MediaSourcePrivateRemote.cpp:
(WebKit::MediaSourcePrivateRemote::markEndOfStream):
(WebKit::MediaSourcePrivateRemote::unmarkEndOfStream):
(WebKit::MediaSourcePrivateRemote::isEnded const):
* Source/WebKit/WebProcess/GPU/media/MediaSourcePrivateRemote.h:

Canonical link: https://commits.webkit.org/262016@main